--- a/Business Proposal.ipynb
+++ b/Business Proposal.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# APNE JAISA PDOS | Business Proposal | Introduction"
+    "# Similar to my  neighbourhood | Business Proposal | Introduction"
    ]
   },
   {
